--- a/src/app/pages/distributeurs/distributeur/distributeur.component.html
+++ b/src/app/pages/distributeurs/distributeur/distributeur.component.html
@@ -1,13 +1,13 @@
-<p i18n>Distributors works!</p>
+
 <table class="table ">
     <thead>
     <tr>
-        <th i18n>id</th>
-        <th i18n>Fullname</th>
-        <th i18n>Email</th>
-        <th i18n>Localization</th>
-        <th i18n>Phone Number</th>
-        <th i18n>Settings</th>
+        <th  >{{"id"| translate}}</th>
+        <th  >{{"Fullname"| translate}}</th>
+        <th  >{{"Email"| translate}}</th>
+        <th  >{{"Localization"| translate}}</th>
+        <th  >{{"Phone Number"| translate}}</th>
+        <th  >{{"Settings"| translate}}</th>
         <!-- Ajoutez d'autres en-têtes si nécessaires -->
     </tr>
     </thead>
@@ -27,24 +27,27 @@
     </tbody>
 </table>
 <div *ngIf="editingDistributeur">
-    <h3>Modifier Livreur</h3>
-    <form (submit)="saveDistributeur(editingDistributeur.id)">
-        <input [(ngModel)]="editingDistributeur.fullname" type="text" placeholder="Fullname"><br>
-        <input [(ngModel)]="editingDistributeur.address" type="text" placeholder="Address"><br>
-        <input [(ngModel)]="editingDistributeur.localisation" type="text" placeholder="Localisation"><br>
-        <input [(ngModel)]="editingDistributeur.numTel" type="text" placeholder="NumTel"><br>
-        <button type="submit">Editer</button><button mat-button color="primary" (click)="editingDistributeur = null">Fermer</button>
+    <h3>{{"Update profile for"| translate}} <strong>{{editingDistributeur.fullname}}</strong></h3>
+    <form >
+        <label >{{"Fullname"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingDistributeur.fullname" type="text" ><br>
+        <label>{{"Address"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingDistributeur.address" type="text"  ><br>
+        <label>{{"Localization"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingDistributeur.localisation" type="text"><br>
+        <label  >{{"Phone"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingDistributeur.numTel" type="text" ><br>
+        <button  mat-button color="primary" (submit)="saveDistributeur(editingDistributeur.id)">{{"Update"| translate}}</button><button mat-button color="primary" (click)="editingDistributeur = null">{{"Cancel"| translate}}</button>
     </form>
 </div>
 <div *ngIf="selectedDistributeur">
-    <h3>Détails du Livreur</h3>
-    <p><strong>Fullname:</strong> {{ selectedDistributeur.fullname }}</p>
-    <p><strong>Address:</strong> {{ selectedDistributeur.address }}</p>
-    <p><strong>Localisation:</strong> {{ selectedDistributeur.localisation }}</p>
-    <p><strong>NumTel:</strong> {{ selectedDistributeur.numTel }}</p>
-    <p><strong>Email:</strong> {{ selectedDistributeur.email }}</p>
-    <p><strong>Etat:</strong> {{ selectedDistributeur.etat ? 'Activé' : 'Désactivé' }}</p>
+    <h3>{{"Details for"| translate}} <strong>{{ selectedDistributeur.fullname }}</strong></h3>
+    <p><strong>{{"Address"| translate}}:</strong> {{ selectedDistributeur.address }}</p>
+    <p><strong>{{"Localization"| translate}}:</strong> {{ selectedDistributeur.localisation }}</p>
+    <p><strong>{{"Phone"| translate}}:</strong> {{ selectedDistributeur.numTel }}</p>
+    <p><strong>{{"Email"| translate}}:</strong> {{ selectedDistributeur.email }}</p>
+    <p><strong>{{"Status"| translate}}:</strong> {{ selectedDistributeur.etat ? 'Activé' : 'Désactivé' }}</p>
     <!-- <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p> -->
-    <button mat-button color="primary" (click)="selectedDistributeur = null">Fermer</button>
+    <button mat-button color="primary" (click)="selectedDistributeur = null">{{"Cancel"| translate}}</button>
   </div>
 
