--- a/src/app/pages/end_users/end-user/end-user.component.html
+++ b/src/app/pages/end_users/end-user/end-user.component.html
@@ -1,12 +1,12 @@
-<p i18n>end-user works!</p>
+
 <table class="table ">
     <thead>
     <tr>
-        <th i18n>id</th>
-        <th i18n>Fullname</th>
-        <th i18n>Email</th>
-        <th i18n>Phone Number</th>
-        <th i18n>Settings</th>
+        <th  >{{"id"| translate}}</th>
+        <th  >{{"Fullname"| translate}}</th>
+        <th  >{{"Email"| translate}}</th>
+        <th  >{{"Phone Number"| translate}}</th>
+        <th  >{{"Settings"| translate}}</th>
         
         <!-- Ajoutez d'autres en-têtes si nécessaires -->
     </tr>
@@ -26,23 +26,27 @@
     </tbody>
 </table>
 <div *ngIf="editingEndUser">
-    <h3>Modifier Livreur</h3>
+    <h3>{{"Update profile for"| translate}}<strong>{{editingEndUser.fullname}}</strong></h3>
     <form (submit)="saveEndUser(editingEndUser.id)">
-        <input [(ngModel)]="editingEndUser.fullname" type="text" placeholder="Fullname"><br>
-        <input [(ngModel)]="editingEndUser.address" type="text" placeholder="Address"><br>
-        <input [(ngModel)]="editingEndUser.localisation" type="text" placeholder="Localisation"><br>
-        <input [(ngModel)]="editingEndUser.numTel" type="text" placeholder="NumTel"><br>
-        <button type="submit">Editer</button><button mat-button color="primary" (click)="editingEndUser = null">Fermer</button>
+        <label >{{"Fullname"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingEndUser.fullname" type="text" ><br>
+        <label>{{"Address"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingEndUser.address" type="text"  ><br>
+        <label>{{"Localization"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingEndUser.localisation" type="text"><br>
+        <label  >{{"Phone"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingEndUser.numTel" type="text" ><br>
+       
+        <button type="submit">{{"Update"| translate}}</button><button mat-button color="primary" (click)="editingEndUser = null">{{"Cancel"| translate}}</button>
     </form>
 </div>
 <div *ngIf="selectedEndUser">
-    <h3>Détails du Livreur</h3>
-    <p><strong>Fullname:</strong> {{ selectedEndUser.fullname }}</p>
-    <p><strong>Address:</strong> {{ selectedEndUser.address }}</p>
-    <p><strong>Localisation:</strong> {{ selectedEndUser.localisation }}</p>
-    <p><strong>NumTel:</strong> {{ selectedEndUser.numTel }}</p>
-    <p><strong>Email:</strong> {{ selectedEndUser.email }}</p>
-    <p><strong>Etat:</strong> {{ selectedEndUser.etat ? 'Activé' : 'Désactivé' }}</p>
+    <h3>{{"Details for"| translate}} <strong>{{ selectedEndUser.fullname }}</strong></h3>
+    <p><strong>{{"Address"| translate}}:</strong> {{ selectedEndUser.address }}</p>
+    <p><strong>{{"Localization"| translate}}:</strong> {{ selectedEndUser.localisation }}</p>
+    <p><strong>{{"Phone"| translate}}:</strong> {{ selectedEndUser.numTel }}</p>
+    <p><strong>{{"Email"| translate}}:</strong> {{ selectedEndUser.email }}</p>
+    <p><strong>{{"Status"| translate}}:</strong> {{ selectedEndUser.etat ? 'Activé' : 'Désactivé' }}</p>
     <!-- <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p> -->
-    <button mat-button color="primary" (click)="selectedEndUser = null">Fermer</button>
+    <button mat-button color="primary" (click)="selectedEndUser = null">{{"Cancel"| translate}}</button>
   </div>
