--- a/src/app/pages/livreurs/livreur/livreur.component.html
+++ b/src/app/pages/livreurs/livreur/livreur.component.html
@@ -1,13 +1,13 @@
-<p i18n>livreur works!</p>
+
 <table class="table ">
     <thead>
     <tr>
-        <th i18n>id</th>
-        <th i18n>Fullname</th>
-        <th i18n>Email</th>
-        <th i18n>Localization</th>
-        <th i18n>Phone Number</th>
-        <th i18n>Settings</th>
+        <th  >{{"id"| translate}}</th>
+        <th  >{{"Fullname"| translate}}</th>
+        <th  >{{"Email"| translate}}</th>
+        <th  >{{"Localization"| translate}}</th>
+        <th  >{{"Phone Number"| translate}}</th>
+        <th  >{{"Settings"| translate}}</th>
         <!-- Ajoutez d'autres en-têtes si nécessaires -->
     </tr>
     </thead>
@@ -30,23 +30,27 @@
     </tbody>
 </table>
 <div *ngIf="editingLivreur">
-    <h3>Modifier Livreur</h3>
+    <h3>{{"Update profile for"| translate}} <strong>{{editingLivreur.fullname}}</strong></h3>
     <form (submit)="saveLivreur(editingLivreur.id)">
-        <input [(ngModel)]="editingLivreur.fullname" type="text" placeholder="Fullname"><br>
-        <input [(ngModel)]="editingLivreur.address" type="text" placeholder="Address"><br>
-        <input [(ngModel)]="editingLivreur.localisation" type="text" placeholder="Localisation"><br>
-        <input [(ngModel)]="editingLivreur.numTel" type="text" placeholder="NumTel"><br>
-        <button type="submit">Editer</button> <button mat-button color="primary" (click)="editingLivreur = null">Fermer</button>
+        <label >{{"Fullname"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingLivreur.fullname" type="text"><br>
+        <label>{{"Address"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingLivreur.address" type="text"  ><br>
+        <label>{{"Localization"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingLivreur.localisation" type="text"><br>
+        <label  >{{"Phone"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingLivreur.numTel" type="text" ><br>
+        <button type="submit">{{"Update"| translate}}</button><button mat-button color="primary" (click)="editingLivreur = null">{{"Cancel"| translate}}</button>
     </form>
 </div>
 <div *ngIf="selectedLivreur">
-    <h3>Détails du Livreur</h3>
-    <p><strong>Fullname:</strong> {{ selectedLivreur.fullname }}</p>
-    <p><strong>Address:</strong> {{ selectedLivreur.address }}</p>
-    <p><strong>Localisation:</strong> {{ selectedLivreur.localisation }}</p>
-    <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p>
-    <p><strong>Email:</strong> {{ selectedLivreur.email }}</p>
-    <p><strong>Etat:</strong> {{ selectedLivreur.etat ? 'Activé' : 'Désactivé' }}</p>
+    <h3>{{"Details for"| translate}} <strong>{{ selectedLivreur.fullname }}</strong></h3>
+  
+    <p><strong>{{"Address"| translate}}:</strong> {{ selectedLivreur.address }}</p>
+    <p><strong>{{"Localization"| translate}}:</strong> {{ selectedLivreur.localisation }}</p>
+    <p><strong>{{"Phone"| translate}}:</strong> {{ selectedLivreur.numTel }}</p>
+    <p><strong>{{"Email"| translate}}:</strong> {{ selectedLivreur.email }}</p>
+    <p><strong>{{"Status"| translate}}:</strong> {{ selectedLivreur.etat ? 'Activé' : 'Désactivé' }}</p>
     <!-- <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p> -->
-    <button mat-button color="primary" (click)="selectedLivreur = null">Fermer</button>
+    <button mat-button color="primary" (click)="selectedLivreur = null">{{"Cancel"| translate}}</button>
   </div>
