--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div>
+<div> 
     <div
             id="main-wrapper"
             data-layout="vertical"
@@ -14,10 +14,10 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="index.html" i18n>
+                    <a class="navbar-brand" href="index.html"  >
                         <!-- Logo icon -->
                         <!--<button class="logo-icon ps-2" style="font-size: 30px ;">-->
-                           <i class="mdi mdi-blackberry" style="font-size: 40px ;"></i>&nbsp;Delivery Management
+                           <i class="mdi mdi-blackberry" style="font-size: 40px ;"></i>{{"Delivery Management "| translate }}
                     </a>
 
 
@@ -94,17 +94,17 @@
                                     class="dropdown-menu dropdown-menu-end user-dd animated"
                                     aria-labelledby="navbarDropdown"
                             >
-                                <a class="dropdown-item" href="profile" i18n
-                                ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
+                                <a class="dropdown-item" href="profile"  
+                                ><i class="mdi mdi-account me-1 ms-1"></i> {{"My Profile"| translate }}</a
                                 >
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="setting" i18n
-                                ><i class="mdi mdi-settings me-1 ms-1"></i> Account
-                                    Setting</a
+                                <a class="dropdown-item" href="setting"  
+                                ><i class="mdi mdi-settings me-1 ms-1"></i> {{"Settings"| translate }}
+                                    </a
                                 >
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login"  (click)="logout()" i18n
-                                ><i class="mdi mdi-logout me-1 ms-1"></i> Logout</a
+                                <a class="dropdown-item" href="login"  (click)="logout()"  
+                                ><i class="mdi mdi-logout me-1 ms-1"></i> {{"Logout"| translate }}</a
                                 >
                             </ul>
                         </li>
@@ -113,8 +113,12 @@
                         <!-- ============================================================== -->
                     </ul>
                 </div>
+                
             </nav>
+            
+            
         </header>
+        
         <!-- End Topbar header -->
         <aside class="left-sidebar" data-sidebarbg="skin5">
             <!-- Sidebar scroll-->
@@ -122,12 +126,13 @@
                 <!-- Sidebar navigation-->
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="pt-4">
+
                         <li class="sidebar-item">
                             <a
                                     class="sidebar-link waves-effect waves-dark "
                                     href="/statistiques"
                             ><i class="mdi mdi-view-dashboard"></i
-                            ><span class="hide-menu" i18n>Statistics</span></a
+                            ><span class="hide-menu"  >{{"Statistics"| translate }}</span></a
                             >
                         </li>
 
@@ -137,7 +142,7 @@
                                     href="/users"
                             >
                               <i class="mdi mdi-account"></i>
-                              <span class="hide-menu" i18n>Users</span></a
+                              <span class="hide-menu"  >{{"Users"| translate }}</span></a
                             >
                          
                         </li>
@@ -147,7 +152,7 @@
                                     href="/livreurs"
                             >
                               <i class="mdi mdi-truck-delivery"></i>
-                              <span class="hide-menu" i18n>Delivery drivers </span></a>
+                              <span class="hide-menu"  >{{"Delivery drivers"| translate }} </span></a>
                         </li>
 
                         <li class="sidebar-item">
@@ -156,7 +161,7 @@
                                     href="/distributeurs"
                             >
                               <i class="mdi mdi-store"></i>
-                              <span class="hide-menu" i18n>Distributors</span></a
+                              <span class="hide-menu"  >{{"Distributors"| translate }}</span></a
                             >
                         </li>
                         <li class="sidebar-item">
@@ -164,7 +169,7 @@
                                     class="sidebar-link "
                                     href="/pointDeVente">
                               <i class="mdi mdi-basket"></i>
-                              <span class="hide-menu" i18n>Points Of Sale</span>
+                              <span class="hide-menu"  >{{"Points Of Sale"| translate }}</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
@@ -173,7 +178,7 @@
                                     href="/endUsers"
                             >
                             <i class="mdi mdi-account"></i>
-                              <span class="hide-menu" i18n>EndUsers</span></a
+                              <span class="hide-menu"  >{{"EndUsers"| translate }}</span></a
                             >
                         </li>
                         <li class="sidebar-item">
@@ -182,7 +187,7 @@
                                     href="/commandes"
                             >
                             <i class="mdi mdi-cart"></i>
-                              <span class="hide-menu" i18n>orders</span></a
+                              <span class="hide-menu"  >{{"orders"| translate }}</span></a
                             >
                         </li>
                         <li class="sidebar-item">
@@ -190,7 +195,7 @@
                                     class="sidebar-link "
                                     href="/setting"
                             ><i class="mdi mdi-settings"></i
-                            ><span class="hide-menu" i18n>Settings </span></a
+                            ><span class="hide-menu"  >{{"Settings "| translate }}</span></a
                             >
                         </li>
                        <!-- <li class="sidebar-item">
@@ -220,10 +225,27 @@
             <!-- End Sidebar scroll-->
         </aside>
         <div class="page-wrapper">
+          <nav class="navbar navbar-dark" style="background-color: #2C353F;">
+            <div class="container">
+              <a class="navbar-brand">
+                {{'Sitetitle' | translate }}
+              </a>
+              <span class="form-inline">
+                <select class="form-control" style="color: white; background-color: rgb(191, 124, 181);" #selectedLang (change)="switchLang(selectedLang.value)">
+                  <option style="color: white;" *ngFor="let language of translate.getLangs()" [value]="language"
+                    [selected]="language === translate.currentLang">
+                    {{ language }}
+                  </option>
+                </select>
+              </span>
+            </div>
+          </nav>
             <div class="page-breadcrumb">
+              
                 <div class="row">
+                  
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h4 class="page-title">        <h1 i18n> Welcome to my application </h1>    </h4>
+                        <h4 class="page-title">        <h1  > {{"Welcome to my application "| translate }}</h1>    </h4>
                     </div>
                 </div>
             </div>
@@ -236,20 +258,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
-                            <h4  i18n>Contact information</h4>
-                            <p i18n>Email : berkaya.wissal98@gmail.com</p>
-                            <p i18n>Phone : +1234567890</p>
+                            <h4   >{{"Contact information"| translate }}</h4>
+                            <p  >{{"Email"| translate }} : berkaya.wissal98@gmail.com</p>
+                            <p  >{{"Phone"| translate }} : +1234567890</p>
                         </div>
                         <div class="col-md-4">
-                            <h4 i18n>Useful links</h4>
+                            <h4  >{{"Useful links"| translate }}</h4>
                             <ul class="list-unstyled">
-                                <li><a href="/accueil" i18n>Home</a></li>
-                                <li><a href="/contact" i18n>Contact Us</a></li>
-                                <li><a href="/faq" i18n>FAQ</a></li>
+                                <li><a href="/accueil"  >{{"Home"| translate }}</a></li>
+                                <li><a href="/contact"  >{{"Contact Us"| translate }}</a></li>
+                                <li><a href="/faq"  >FAQ</a></li>
                             </ul>
                         </div>
                         <div class="col-md-4">
-                            <h4 i18n>Social Networks</h4>
+                            <h4  >{{"Social Networks"| translate }}</h4>
                             <ul class="list-inline"> 
                                <li> <a href="https://github.com/berkayawissal" ><i class="mdi mdi-github-box" style="font-size: 30px"></i></a>  </li>
                                 <li><a href="https://www.facebook.com/profile.php?id=100049420097170"><i class="mdi mdi-facebook-box" style="font-size: 30px"></i></a> </li>
@@ -260,29 +282,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-12">
-                            <p class="text-center">&copy; 2023 Company Name.</p>
+                            <p class="text-center">&copy; 2023 {{"Company Name."| translate }}</p>
                         </div>
                     </div>
                 </div>
-                <button >English</button>
-                <button >Français</button>
+                
             </footer>
-            <nav class="navbar navbar-dark bg-primary">
-                <div class="container">
-                  <a class="navbar-brand">
-                    {{'Sitetitle' | translate }}
-                  </a>
-                  <span class="form-inline">
-                    <select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
-                      <option *ngFor="let language of translate.getLangs()" [value]="language"
-                        [selected]="language === translate.currentLang">
-                        {{ language }}
-                      </option>
-                    </select>
-                  </span>
-                </div>
-              </nav>
-              <div class="container">
+         
+              <!-- <div class="container">
                 <form>
                   <div class="form-group">
                     <label>{{'Name' | translate}}</label>
@@ -311,9 +318,10 @@
                   </div>
                   <button type="submit" class="btn btn-block btn-danger">{{'Submit' | translate}}</button>
                 </form>
-              </div>
-              <span class="form-inline">
-                <select 
+              </div> -->
+              <!-- <span class="form-inline">
+                {{"  Useful Language"}}
+                <div 
                     class="form-control" 
                     #selectedLang 
                     (change)="switchLang(selectedLang.value)">
@@ -322,9 +330,9 @@
                     [selected]="language === translate.currentLang">
                     {{ language }}
                   </option>
-                </select>
+                </div>
               </span>
-              
+               -->
               
         </div>
     </div>
