--- a/src/app/pages/point_de_vente/point-de-vente/point-de-vente.component.html
+++ b/src/app/pages/point_de_vente/point-de-vente/point-de-vente.component.html
@@ -1,12 +1,12 @@
-<p i18n>Points Of Sale works!</p>
+
 <table class="table ">
     <thead>
     <tr>
-        <th i18n>id</th>
-        <th i18n>Email</th>
-        <th i18n>Address</th>
-        <th i18n>Phone Number</th>
-        <th i18n>Settings</th>
+        <th  >{{"id"| translate}}</th>
+        <th  >{{"Fullname"| translate}}</th>
+        <th  >{{"Email"| translate}}</th>
+        <th  >{{"Phone Number"| translate}}</th>
+        <th  >{{"Settings"| translate}}</th>
         
         <!-- Ajoutez d'autres en-têtes si nécessaires -->
     </tr>
@@ -26,23 +26,26 @@
     </tbody>
 </table>
 <div *ngIf="editingPointDeVente">
-    <h3>Modifier Livreur</h3>
+    <h3>{{"Update profile for"| translate}}<strong>{{editingPointDeVente.fullname}}</strong></h3>
     <form (submit)="savePointDeVente(editingPointDeVente.id)">
-        <input [(ngModel)]="editingPointDeVente.fullname" type="text" placeholder="Fullname"><br>
-        <input [(ngModel)]="editingPointDeVente.address" type="text" placeholder="Address"><br>
-        <input [(ngModel)]="editingPointDeVente.localisation" type="text" placeholder="Localisation"><br>
-        <input [(ngModel)]="editingPointDeVente.numTel" type="text" placeholder="NumTel"><br>
-        <button type="submit">Editer</button><button mat-button color="primary" (click)="editingPointDeVente = null">Fermer</button>
+        <label >{{"Fullname"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingPointDeVente.fullname" type="text" ><br>
+        <label>{{"Address"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingPointDeVente.address" type="text"  ><br>
+        <label>{{"Localization"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingPointDeVente.localisation" type="text"><br>
+        <label  >{{"Phone"| translate}} :&emsp;</label>
+        <input [(ngModel)]="editingPointDeVente.numTel" type="text" ><br>
+       <button type="submit">{{"Update"| translate}}</button><button mat-button color="primary" (click)="editingPointDeVente = null">{{"Cancel"| translate}}</button>
     </form>
 </div>
 <div *ngIf="selectedPointDeVente">
-    <h3>Détails du Livreur</h3>
-    <p><strong>Fullname:</strong> {{ selectedPointDeVente.fullname }}</p>
-    <p><strong>Address:</strong> {{ selectedPointDeVente.address }}</p>
-    <p><strong>Localisation:</strong> {{ selectedPointDeVente.localisation }}</p>
-    <p><strong>NumTel:</strong> {{ selectedPointDeVente.numTel }}</p>
-    <p><strong>Email:</strong> {{ selectedPointDeVente.email }}</p>
-    <p><strong>Etat:</strong> {{ selectedPointDeVente.etat ? 'Activé' : 'Désactivé' }}</p>
-    <!-- <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p> -->
-    <button mat-button color="primary" (click)="selectedPointDeVente = null">Fermer</button>
+    <h3>{{"Details for"| translate}} <strong>{{ selectedPointDeVente.fullname }}</strong></h3>
+    <p><strong>{{"Address"| translate}}:</strong> {{ selectedPointDeVente.address }}</p>
+    <p><strong>{{"Localization"| translate}}:</strong> {{ selectedPointDeVente.localisation }}</p>
+    <p><strong>{{"Phone"| translate}}:</strong> {{ selectedPointDeVente.numTel }}</p>
+    <p><strong>{{"Email"| translate}}:</strong> {{ selectedPointDeVente.email }}</p>
+    <p><strong>{{"Status"| translate}}:</strong> {{ selectedPointDeVente.etat ? 'Activé' : 'Désactivé' }}</p>
+   <!-- <p><strong>NumTel:</strong> {{ selectedLivreur.numTel }}</p> -->
+    <button mat-button color="primary" (click)="selectedPointDeVente = null">{{"Cancel"| translate}}</button>
   </div>
