--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,4 +1,4 @@
-/* 
+
 * {
     box-sizing: border-box;
 }
@@ -67,7 +67,7 @@ button {
     margin-bottom: 16px;
 }
 .main-header-line h1 {
-    color: #3a4748;
+    color: white;
     margin: 0;
     font-size: 30px;
     line-height: 32px;
@@ -132,7 +132,7 @@ button {
 .chart-container {
     width: 100%;
     border-radius: 10px;
-    background: linear-gradient(40deg, #b0d5d8 10%, #91b7c5 100%, #b0d5d8 90%);
+    background: linear-gradient(80deg, #D789C1 10%, #A1689A 100%, #C34FA2 90%);
     padding: 16px;
     display: flex;
     align-items: center;
@@ -145,7 +145,7 @@ button {
     flex-basis: 120px;
 }
 .chart-info-wrapper h2 {
-    color: #3a4748;
+    color: #1F262D;
     font-size: 11.5px;
     line-height: 16px;
     font-weight: 600;
@@ -153,7 +153,7 @@ button {
     margin: 0 0 8px 0;
 }
 .chart-info-wrapper span {
-    color: #3a4748;
+    color: #333c46;
     font-size: 24px;
     line-height: 32px;
     font-weight: 500;
@@ -188,10 +188,10 @@ button {
     stroke: #557b88;
 }
 .circular-chart.pink .circle {
-    stroke: #e38292;
+    stroke: #28763E;
 }
 .circular-chart.pink .circle-bg {
-    stroke: #b77579;
+    stroke: #6FA37E;
 }
 .percentage {
     fill: #606060;
@@ -237,7 +237,7 @@ button {
     display: inline-block;
 }
 .bar-progress.applications {
-    background-color: #e38292;
+    background-color: #28763E;
 }
 .bar-progress.shortlisted {
     background-color: #5ca0a8;
@@ -261,7 +261,7 @@ button {
     margin-right: 8px;
 }
 .progress-color.applications {
-    background-color: #e38292;
+    background-color: #28763E;
 }
 .progress-color.shortlisted {
     background-color: #5ca0a8;
@@ -541,4 +541,4 @@ app-right-section-header span.notification-active:before {
     .main-header-line h1 {
         font-size: 14px;
     }
-} */
+}
