--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -195,7 +195,7 @@
                                     class="sidebar-link "
                                     href="/setting"
                             ><i class="mdi mdi-settings"></i
-                            ><span class="hide-menu"  >{{"Settings "| translate }}</span></a
+                            ><span class="hide-menu"  >{{"Settings"|translate}}</span></a
                             >
                         </li>
                        <!-- <li class="sidebar-item">
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row" style="min-height: 680px; background-color: #DEE2E6;">
+                <div class="row" >
                     <router-outlet></router-outlet>
                 </div>
             </div>
