--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,21 +4,21 @@
             <div class="">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
+                        <h4 class="card-title">{{"Update profile"|translate}}</h4>
+                        <p class="card-category">{{"Complete your profile"|translate}}</p>
                     </div>
                     <div class="card-body">
                         <form>
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="form-group">
-                                        <label>Email</label>
+                                        <label>{{"Email"|translate}}</label>
                                         <input class="form-control" placeholder="Email (disabled)" disabled type="email">
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="form-group">
-                                        <label>Fullname</label>
+                                        <label>{{"Fullname"|translate}}</label>
                                         <input class="form-control" placeholder="Fullname">
                                     </div>
                                 </div>
@@ -26,7 +26,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label>Address</label>
+                                        <label>{{"Address"|translate}}</label>
                                         <input class="form-control" placeholder="Address" type="text">
                                     </div>
                                 </div>
@@ -34,19 +34,19 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label>City</label>
+                                        <label>{{"City"|translate}}</label>
                                         <input class="form-control" placeholder="City" type="text">
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label>Country</label>
+                                        <label>{{"Country"|translate}}</label>
                                         <input class="form-control" placeholder="Country" type="text">
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label>Postal Code</label>
+                                        <label>{{"Postal Code"|translate}}</label>
                                         <input class="form-control" placeholder="Postal Code" type="text">
                                     </div>
                                 </div>
@@ -54,12 +54,12 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label>About Me</label>
+                                        <label>{{"About Me"|translate}}</label>
                                         <textarea class="form-control" placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-danger pull-right">Update Profile</button>
+                            <button type="submit" class="btn btn-danger pull-right">{{"Update"|translate}} {{"Profile"|translate}}</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
